[tool.poetry]
name = "lelikov_brain_games"
version = "0.6.5"
description = "Brain games. Contains even, calc, gcd, progression and prime games"
authors = ["Alexandr Lelikov <lelikovas@gmail.com>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/Lelikov/python-project-lvl1"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.8",
  "Environment :: Console",
  "Natural Language :: English",
  "Topic :: Games/Entertainment :: Puzzle Games"
  ]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
